[B]WIMM Change log[/B]

4.1.10
 - Revert JSON API version to 6.14.3

4.1.9
- New project logo/fanart/favicon courtesy of
  (c) 2014 Mike Kalashnikov aka samfisher
  Thank you so much for the dedication and hardwork.

4.1.8
- Partial rename from XWMM to WIMM
- Tab name fix
- Copyright headers XWMM to WIMM
- Bump json api to 6.16.0 (Kodi Helix api version)
- Allow movie export data to be sorted by date added. (Issue #110)
- Fix watched marker. (Issue #103)
- Clear episode details when show or season is changed. (Issue #105)
- Collapse extra details panels. (Issue #99)

[B]XWMM Change log[/B]

4.1.7
- Add option to scan/clean the library (Issue #100)
- Adjust TV show layout for smaller screens (Issue #99)
- Update movie list when changes are saved (Issue #88)

4.1.6
- Add header icon that was missed in a7f7ee5
- Rename field that was missed from 0ebbce8
- Allow ignore article sort with genres and sets
- Fix padding on season and episode list when there's a scrollbar
- xbmcJsonRPC converts parameters to JSON string, no need to do it before hand
- Clean up and simplify Ext.data.XBMCProxy
- Empty genre fix no longer required
- updateXBMCSet no longer required
- Add missing fanart.jpg and a shiny new wacky icon.png

4.1.5
- Don't freak out when XBMC returns no results
- Rewrite movie set management feature (Issue #88)
- Rearrange directory layout (Issue #85)
- Add icons to set and watched headings (Issue #87)
- Remove unused icons
- Add missing license file
- Add license header to source files

4.1.4
- Clean up TV and Movie section
- Add missing writer field for episodes
- Allow TV shows to be sorted with the ignore article option
- Remove extra favicon.ico
- Use the same field names as XBMC
- Add missing tag field for movies
- Sort movies by sort title
- Require Gotham (XBMC 13.x) as a minimum
- No default image is better than a squished one
- Fix artwork on music section

4.1.3
- Fix performance issues on Movies by Genre view (Issue #81)